2004-06-13  Gert Driesen <drieseng@users.sourceforge.net>

	* SchemaReference.cs: corrected namespace
	* SoapBinding.cs: corrected namespace

2004-06-10  Lluis Sanchez Gual  <lluis@ximian.com>

	* DiscoveryClientProtocol.cs: In DiscoverAny, catch expection of type
	  DiscoveryException and rethrow the included Exception instead.
	* DiscoveryReference.cs: Added BaseUri property, that returns an uri
	  for the reference, supporting file uris.
	* ContractReference.cs: Use the new property BaseUri to build the import
	  uri.

2004-06-01  Gert Driesen <drieseng@users.sourceforge.net>

	* DiscoveryReference.cs: Added missing XmlIgnore attribute.

2004-05-24  Lluis Sanchez Gual  <lluis@ximian.com>

	* ContractReference.cs: convert relative import uris to absolute uris.
	* DiscoveryClientProtocol.cs: Before resolving a reference, always
	  set the Url property.

2004-03-10  Lluis Sanchez Gual  <lluis@ximian.com>

	* ContractReference.cs, DiscoveryDocumentReference.cs: Delegate handling 
	  of errors to the base class.
	* ContractSearchPattern.cs, DiscoveryDocumentLinksPattern.cs, 
	  DiscoveryDocumentSearchPattern.cs, XmlSchemaSearchPattern.cs: Implemented.
	* DiscoveryClientProtocol.cs: Do not throw exceptions in ResolveAll method,
	  rather add them to the errors list.
	* DiscoveryReference.cs: Generate DiscoveryException where needed, so
	  DiscoveryClientProtocol can get the url for which an exception was thrown.
	* DiscoveryExceptionDictionary.cs: Implemented.

2004-03-10  Lluis Sanchez Gual  <lluis@ximian.com>

	* DiscoveryClientProtocol.cs: Read additional information (such as soap
	  bindings) from the discovery documents.
	* DiscoveryDocument.cs: Added support for additional discovery information.
	* DiscoveryDocumentSerializer.cs: Updated serializer, added support for
	  soap bindings.

2004-03-02  Lluis Sanchez Gual  <lluis@ximian.com>

	* DiscoveryClientProtocol.cs: Now it can get alternate urls from HTML pages